<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.kapelle.procheck.springboot</groupId>
    <artifactId>ProCheck-springBoot</artifactId>
    <version>1.0-SNAPSHOT</version> 
    <packaging>jar</packaging>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.0</version>
    </parent>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>17</java.version>
        <!--maven.compiler.source>18</maven.compiler.source>
        <maven.compiler.target>18</maven.compiler.target-->
        <!--exec.mainClass>com.kapelle.procheck.springboot.ProCheckSpringBoot</exec.mainClass-->   
        
        <start-class>com.kapelle.procheck.springboot.ProCheckSpringBoot</start-class> 
        
    </properties>  
    <dependencies>
        
        <dependency>
            <groupId>com.microsoft.sqlserver</groupId>
            <artifactId>mssql-jdbc</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter</artifactId>
        </dependency>
        <dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
        <dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-web</artifactId>
		</dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-mail</artifactId>
        </dependency>
        <dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-config</artifactId>
		</dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-taglibs</artifactId>
            <version>5.2.2.RELEASE</version>
        </dependency>
        <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-test</artifactId>
                <scope>test</scope>
        </dependency> 
        <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-web</artifactId>
        </dependency> 
        <dependency> 
            <groupId>org.apache.tomcat.embed</groupId> 	
            <artifactId>tomcat-embed-jasper</artifactId> 
        </dependency> 
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>jstl</artifactId>
        </dependency>
        <dependency> 
            <groupId>org.springframework.boot</groupId> 	
            <artifactId>spring-boot-starter-tomcat</artifactId> 
        </dependency>
        <dependency> 
            <groupId>org.springframework.boot</groupId> 	
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency> 
            <groupId>mysql</groupId> 	
            <artifactId>mysql-connector-java</artifactId>
            <scope>runtime</scope>
        </dependency>
        <!--TODO: NOTE: If you're using org.json in your code and it is conflicting with Spring's Vaadin dependency, 
            then I would recommend trying open-json. It's a port of Vaadin's re-implementation of org.json, 
            but they changed the packages so you won't have any conflicts with org.json:json or com.vaadin.external.google:android-json-->
        <!--dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20220320</version>
        </dependency-->
        <dependency>
        <groupId>com.github.openjson</groupId>
        <artifactId>openjson</artifactId>
        <version>1.0.12</version>
    </dependency>
        <dependency>
            <groupId>com.google.maps</groupId>
            <artifactId>google-maps-services</artifactId>
            <version>0.19.0</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.11.0</version>
        </dependency>
    </dependencies> 
    <build>
        <plugins>
            <!--TODO: NOTE: Azure configuration-->
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>com.microsoft.azure</groupId>
                <artifactId>azure-spring-apps-maven-plugin</artifactId>
                <version>1.11.0</version>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Add-Opens>java.lang java.base</Add-Opens>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>